--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -91,10 +91,15 @@ nav img {
 	margin-top: 5px;
 }
 
+header {
+	vertical-align: top;
+}
+
 header div {
 	text-align: center;
 	display: inline-block;
 	width: 50%;
+	margin-top: 15%;
 }
 
 header h1 {
@@ -105,6 +110,7 @@ header img {
 	display: inline-block;
 	margin-top: 5%;
 	width: 49%;
+	vertical-align: top;
 }
 
 header button {
